# fr4

./: .gitignore  Cargo.toml  DESIGN.org  README.org  coverage.sh  prelude.fr4
.github/workflows/: rust.yml
src/: bdl.rs  main.rs  model.rs  test.fr4
test_data/: basic_shapes.fr4  clipping.fr4  control_structures.fr4  core_words.fr4  empty.fr4
