[package]
name = "fr4"
version = "0.1.0"
authors = ["Nick Pascucci <ndpi@alum.mit.edu>"]
edition = "2018"

description = "An interactive design tool for creating printed circuit boards programmatically."
repository = "https://github.com/nickpascucci/fr4"
readme = "README.md"

license = "GPL-3.0-only"

keywords = ["printed-circuit-board", "design", "electronics", "computer-aided-design"]
categories = ["science", "science::robotics"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
rustyline = "7.0.0"