[package]
name = "fr4"
version = "0.1.0"
authors = ["Nick Pascucci <ndpi@alum.mit.edu>"]
edition = "2018"

description = "An interactive design tool for creating printed circuit boards programmatically."
repository = "https://github.com/nickpascucci/fr4"
readme = "README.md"

license = "GPL-3.0-only"

keywords = ["printed-circuit-board", "design", "electronics", "computer-aided-design"]
categories = ["science", "science::robotics"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
rustyline = "7.0.0"
pistoncore-sdl2_window = "0.66.0"
piston = "0.52.1"
piston2d-graphics = "0.39.0"
piston2d-opengl_graphics = "0.76.0"