[package]
name = "fr4"
version = "0.1.0"
authors = ["Nick Pascucci <ndpi@alum.mit.edu>"]
edition = "2018"

description = "An interactive design tool for creating printed circuit boards programmatically."
repository = "https://github.com/nickpascucci/fr4"
readme = "README.md"

license = "GPL-3.0-only"

keywords = ["printed-circuit-board", "design", "electronics", "computer-aided-design"]
categories = ["science", "science::robotics"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
argh = "0.1.4"
env_logger = "0.8.3"
log = "0.4.14"
piston = "0.53.1"
piston2d-graphics = "0.39.0"
piston2d-opengl_graphics = "0.77.0"
pistoncore-sdl2_window = "0.68.0"
rustyline = "7.1.0"
thiserror = "1.0.23"
